[gd_scene load_steps=2 format=2]

[ext_resource path="res://wpnsys/hurt_stuff/hurthitboxes/hitbox.gd" type="Script" id=1]

[node name="Area2D" type="Area2D"]
modulate = Color( 1, 0, 0, 1 )
collision_layer = 1024
collision_mask = 56
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
pause_mode = 1
wait_time = 0.05

[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
